manifests/docmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docmanager-api
  namespace: cts-platform
  labels:
    app: docmanager-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docmanager-api
  template:
    metadata:
      labels:
        app: docmanager-api
    spec:
      containers:
        - name: docmanager-api
          image: ghcr.io/hunairali/docmanager-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 384Mi
            limits:
              cpu: 750m
              memory: 768Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
