manifests/docmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docmanager-api
  namespace: cts-platform
spec:
  selector:
    app: docmanager-api
  ports:
    - port: 80
      targetPort: 8080
