manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cts-platform-ingress
  namespace: cts-platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: docmanager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docmanager-api
                port:
                  number: 80
